Always prevent scrollbars on the 3D site

--- a/3D/knoxy.css
+++ b/3D/knoxy.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
  }
 
 #ui-bar {
